k8s/deployment-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-manager-blue
  labels:
    app: task-manager
    version: blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: task-manager
      version: blue
  template:
    metadata:
      labels:
        app: task-manager
        version: blue
    spec:
      containers:
      - name: task-manager
        image: 603470017892.dkr.ecr.ap-south-1.amazonaws.com/task-manager:v1
        ports:
          - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 10
