k8s/service-green.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-manager-svc-green
spec:
  selector:
    app: task-manager
    version: green
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
